@@ -2271,6 +2271,7 @@ evdns_request_transmit(struct request *req) {
 		retcode = 1;
 		/* fall through: we'll set a timeout, which will time out,
 		 * and make us retransmit the request anyway. */
+		/* FALLTHROUGH */
 	default:
 		/* all ok */
 		log(EVDNS_LOG_DEBUG,
